<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.xuxueli</groupId>
	<artifactId>xxl-conf</artifactId>
	<version>2.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>xxl-conf</name>
	<description>A distributed configuration center and registration center.</description>
	<url>https://www.xuxueli.com/</url>

	<modules>
		<module>xxl-conf-core</module>
		<module>xxl-conf-admin</module>
		<module>xxl-conf-samples</module>
	</modules>

	<properties>
		<!-- env -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.test.skip>true</maven.test.skip>
		<!-- plugin -->
		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
		<maven-source-plugin.version>3.4.0</maven-source-plugin.version>
		<maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
		<maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
		<central-publishing-maven-plugin.version>0.9.0</central-publishing-maven-plugin.version>
		<!-- base -->
		<slf4j-api.version>2.0.17</slf4j-api.version>
		<junit-jupiter.version>6.0.1</junit-jupiter.version>

		<!-- spring -->
		<spring-boot.version>4.0.1</spring-boot.version>
		<spring.version>7.0.2</spring.version>
		<!-- mybatis & db -->
		<mybatis-spring-boot-starter.version>4.0.1</mybatis-spring-boot-starter.version>
		<mysql-connector-j.version>9.5.0</mysql-connector-j.version>

		<!-- xxl-sso (+xxl-tool、gson) -->
		<xxl-sso.version>2.3.2</xxl-sso.version>
		<!-- xxl-tool -->
		<xxl-tool.version>2.4.2</xxl-tool.version>
		<!-- gson -->
        <gson.version>2.13.2</gson.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- springboot -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- slf4j-reload4j -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-reload4j</artifactId>
				<version>${slf4j-api.version}</version>
			</dependency>
			<!-- junit -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit-jupiter.version}</version>
			</dependency>

			<!-- spring-context -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>

			<!-- mybatis-starter：mybatis + mybatis-spring + hikari（default） -->
			<dependency>
				<groupId>org.mybatis.spring.boot</groupId>
				<artifactId>mybatis-spring-boot-starter</artifactId>
				<version>${mybatis-spring-boot-starter.version}</version>
			</dependency>
			<!-- mysql -->
			<dependency>
				<groupId>com.mysql</groupId>
				<artifactId>mysql-connector-j</artifactId>
				<version>${mysql-connector-j.version}</version>
			</dependency>

			<!-- xxl-tool：+gson -->
			<dependency>
				<groupId>com.xuxueli</groupId>
				<artifactId>xxl-tool</artifactId>
				<version>${xxl-tool.version}</version>
			</dependency>
			<!-- gson -->
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>

			<!-- xxl-sso -->
			<dependency>
				<groupId>com.xuxueli</groupId>
				<artifactId>xxl-sso-core</artifactId>
				<version>${xxl-sso.version}</version>
			</dependency>

			<!-- xxl-conf -->
			<dependency>
				<groupId>com.xuxueli</groupId>
				<artifactId>xxl-conf-core</artifactId>
				<version>${project.parent.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<licenses>
		<license>
			<name>GNU General Public License version 3</name>
			<url>https://opensource.org/licenses/GPL-3.0</url>
		</license>
	</licenses>
	<scm>
		<tag>master</tag>
		<url>https://github.com/xuxueli/xxl-conf.git</url>
		<connection>scm:git:https://github.com/xuxueli/xxl-conf.git</connection>
		<developerConnection>scm:git:git@github.com:xuxueli/xxl-conf.git</developerConnection>
	</scm>
	<developers>
		<developer>
			<id>XXL</id>
			<name>xuxueli</name>
			<email>931591021@qq.com</email>
			<url>https://github.com/xuxueli</url>
		</developer>
	</developers>

	<build>
		<plugins>
		</plugins>
	</build>

	<profiles>

		<profile>
			<id>release</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>xxl-conf-core</module>
			</modules>
			<build>
				<plugins>
					<!-- Compiler -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${maven-compiler-plugin.version}</version>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<parameters>true</parameters>
						</configuration>
					</plugin>
					<!-- Source -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- Javadoc -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<doclint>none</doclint>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<!-- GPG -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<configuration>
							<useAgent>false</useAgent>
						</configuration>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- maven central -->
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>${central-publishing-maven-plugin.version}</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<excludeArtifacts>
								<artifact>xxl-conf-admin</artifact>
								<artifact>xxl-conf-samples</artifact>
								<artifact>xxl-conf-sample-frameless</artifact>
								<artifact>xxl-conf-sample-springboot</artifact>
							</excludeArtifacts>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>